Restructured code number 100 using strings rather than arrays and changed cost function for UC